refactor commit msg in all env

--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -113,18 +113,22 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Generate production image tag
+      - name: Generate production image tag from commit message
         id: generate-tag
         run: |
-          TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
-          COMMIT_ID=$(git rev-parse HEAD)
-          # Extract commit message and make it safe for use in tags
-          COMMIT_MSG=$(git log -1 --pretty=%B | tr -d '\n' | cut -c1-50)
-          SAFE_COMMIT_MSG=$(printf '%s' "$COMMIT_MSG" | sed -e 's/[^a-zA-Z0-9]/_/g' | cut -c1-30)
-          IMAGE_TAG="prod-${SAFE_COMMIT_MSG}-${TIMESTAMP}-${COMMIT_ID:0:7}"
+          COMMIT_ID=$(git rev-parse HEAD | cut -c1-7)
+          # Robust commit message handling
+          COMMIT_MSG=$(git log -1 --pretty=%B | head -1 || echo "no-message")
+          # Remove newlines, tabs, and limit length
+          CLEAN_MSG=$(echo "$COMMIT_MSG" | tr -d '\n\r\t' | head -c 60 | tr -s ' ' | xargs || echo "no-message")
+          # Sanitize to safe characters only
+          SAFE_MSG=$(echo "$CLEAN_MSG" | sed -e 's/[^a-zA-Z0-9 _-]//g' -e 's/[[:space:]]/-/g' -e 's/--*/-/g' -e 's/^-\+\|-\+$//g' | cut -c1-35 | sed 's/-$//' || echo "fallback")
+          # Ensure we have a valid tag
+          FINAL_MSG=$(echo "$SAFE_MSG" | grep -E '^[a-zA-Z0-9][a-zA-Z0-9_-]*$' || echo "commit-$(date +%s)")
+          IMAGE_TAG="prod-${FINAL_MSG}-${COMMIT_ID}"
           
           printf 'IMAGE_TAG=%s\n' "$IMAGE_TAG" >> $GITHUB_OUTPUT
-          printf 'REPO_COMMIT_SHA=%s\n' "$COMMIT_ID" >> $GITHUB_OUTPUT
+          printf 'REPO_COMMIT_SHA=%s\n' "$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
           printf 'COMMIT_MESSAGE=%s\n' "$COMMIT_MSG" >> $GITHUB_OUTPUT
           printf 'Generated Image Tag: %s\n' "$IMAGE_TAG"
 
