--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -29,11 +29,11 @@ patches:
                 imagePullPolicy: Always
                 resources:
                   requests:
-                    cpu: 1
-                    memory: 1Gi
+                    cpu: "100m"
+                    memory: "256Mi"
                   limits:
-                    cpu: 2
-                    memory: 2Gi
+                    cpu: "1"
+                    memory: "512Mi"
                 ports:
                   - containerPort: 80
     target:
