Resource Optimization Summary: The Kubernetes resource allocation optimization is now complete:
✅ CPU/Memory Resources Reduced - Frontend containers now use optimized resource requests/limits
✅ HPA Max Replicas Optimized - Non-production environments limited to 2 replicas maximum
✅ Commit ID Tagging Fixed - All CI/CD workflows use full 40-character commit SHAs
✅ Production Stability Maintained - Production HPA and resource limits remain conservative

--- a/k8s/overlays/stg/kustomization.yaml
+++ b/k8s/overlays/stg/kustomization.yaml
@@ -428,6 +428,16 @@ patches:
     target:
       kind: ConfigMap
       name: frontend-nginx-config
+  - patch: |-
+      apiVersion: autoscaling/v2
+      kind: HorizontalPodAutoscaler
+      metadata:
+        name: examxv2-frontend-pod-autoscaler
+      spec:
+        maxReplicas: 2
+    target:
+      kind: HorizontalPodAutoscaler
+      name: examxv2-frontend-pod-autoscaler
   # - patch: |-
   #     apiVersion: networking.k8s.io/v1
   #     kind: Ingress
