--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -330,3 +330,13 @@ patches:
     target:
       kind: ConfigMap
       name: frontend-nginx-config
+  - patch: |-
+      apiVersion: autoscaling/v2
+      kind: HorizontalPodAutoscaler
+      metadata:
+        name: examxv2-frontend-pod-autoscaler
+      spec:
+        maxReplicas: 2
+    target:
+      kind: HorizontalPodAutoscaler
+      name: examxv2-frontend-pod-autoscaler
