--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -30,10 +30,10 @@ patches:
                 resources:
                   requests:
                     cpu: "100m"
-                    memory: "256Mi"
+                    memory: "512Mi"
                   limits:
                     cpu: "1"
-                    memory: "512Mi"
+                    memory: "1Gi"
                 ports:
                   - containerPort: 80
     target:
