--- a/k8s/base/deployment/frontend-deploy.yaml
+++ b/k8s/base/deployment/frontend-deploy.yaml
@@ -4,6 +4,8 @@ metadata:
   name: examxv2-frontend
   labels:
     app: examxv2-frontend
+  annotations:
+    change-cause: "Added change-cause annotation to deployment"
 spec:
   replicas: 1
   selector:
