Enhance UAT deployment workflow to skip commit if no changes are detected

--- a/.github/workflows/ci-cd-uat.yaml
+++ b/.github/workflows/ci-cd-uat.yaml
@@ -227,9 +227,15 @@ jobs:
           git config --local user.email "hariharen@greatify.ai"
           git config --local user.name "Hariharen"
           git add k8s/overlays/uat/kustomization.yaml
-          git commit -m "Update image tags for UAT deployment - ${{ env.COMMIT_MESSAGE }}"
-          git push origin main
           
+          # Check if there are any changes to commit
+          if git diff --cached --quiet; then
+            echo "No changes to commit, skipping commit and push"
+          else
+            echo "Changes detected, committing and pushing"
+            git commit -m "Update image tags for uat deployment"
+            git push origin main
+          fi
       # - name: Push to protected branch
       #   uses: CasperWA/push-protected@v2
       #   with:
