Refactor CI/CD workflows to support dynamic runner selection and update Kubernetes configurations with secret variables for dev, staging, and UAT environments.

--- a/.github/workflows/ci-cd-dev.yaml
+++ b/.github/workflows/ci-cd-dev.yaml
@@ -16,7 +16,7 @@ on:
 
 jobs:   
   deploy-frontend-dev:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment: dev
     steps:
       - name: Display Deployment Information
@@ -67,7 +67,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Update Kubernetes configuration
-        run: aws eks update-kubeconfig --name dev-stg-cluster --region ap-south-1
+        run: aws eks update-kubeconfig --name ${{ secrets.DEV_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
       - name: Deploy to development environment
         run: |
