Add USE_BADPROXY argument to CI/CD workflows for staging and UAT environments

--- a/.github/workflows/ci-cd-stg.yaml
+++ b/.github/workflows/ci-cd-stg.yaml
@@ -146,6 +146,7 @@ jobs:
           platforms: linux/arm64
           build-args: 
             ENV_FILE=.env
+            USE_BADPROXY=true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           no-cache: false
