--- a/.github/workflows/ci-cd-dev.yaml
+++ b/.github/workflows/ci-cd-dev.yaml
@@ -16,7 +16,7 @@ on:
 
 jobs:   
   deploy-frontend-dev:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: dev
     steps:
       - name: Display Deployment Information
