--- a/.github/workflows/ci-cd-uat.yaml
+++ b/.github/workflows/ci-cd-uat.yaml
@@ -12,7 +12,7 @@ on:
         required: true
         type: string
       use_default_runner:
-        description: 'Run on default runner instead of self-hosted?'
+        description: 'Run on default runner (ubuntu-24.04-arm) instead of self-hosted?'
         required: true
         type: boolean
         default: false
@@ -68,7 +68,7 @@ jobs:
 
   build-frontend-uat-image:
     # needs: security-password-check 
-    runs-on: ${{ github.event.inputs.use_default_runner == 'true' && 'ubuntu-latest' || 'self-hosted' }}
+    runs-on: ${{ github.event.inputs.use_default_runner == 'true' && 'ubuntu-24.04-arm' || 'self-hosted' }}
     environment: uat
     steps:
       - name: Checkout repository code
@@ -95,16 +95,31 @@ jobs:
             --query SecretString \
             --output text > .env
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: v0.12.0
+          driver-opts: |
+            image=moby/buildkit:v0.12.0
+          buildkitd-flags: |
+            --debug
+            --allow-insecure-entitlement security.insecure
+            --allow-insecure-entitlement network.host
+          config-inline: |
+            [registry."docker.io"]
+              mirrors = ["mirror.gcr.io"]
+            [worker.oci]
+              max-parallelism = 4
 
-      - name: Ensure Buildx is available
+      - name: Free disk space
         run: |
-          docker buildx use flamboyant_haslett || docker buildx create --name flamboyant_haslett --use
-          docker buildx inspect --bootstrap
-  
-      - name: Prune Docker
-        run: docker system prune -af 
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo apt-get clean
+          docker system prune -af
+          df -h 
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -133,8 +148,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ env.REPO_COMMIT_SHA }}
+          key: ${{ runner.os }}-buildx-uat-${{ env.REPO_COMMIT_SHA }}
           restore-keys: |
+            ${{ runner.os }}-buildx-uat-
             ${{ runner.os }}-buildx-
   
       - name: Build and push frontend Docker image
@@ -194,7 +210,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
   deploy-frontend-uat:
-    runs-on: ${{ github.event.inputs.use_default_runner == 'true' && 'ubuntu-latest' || 'self-hosted' }}
+    runs-on: ${{ github.event.inputs.use_default_runner == 'true' && 'ubuntu-24.04-arm' || 'self-hosted' }}
     needs: [build-frontend-uat-image]
     environment: uat
     steps:
